Finished menu. Fix minimization overlap. Fix logo size.

--- a/mysite/static/styles/sass/_fonts.sass
+++ b/mysite/static/styles/sass/_fonts.sass
@@ -3,3 +3,4 @@
 
 $header_font: Oswald, Georgia, Sans Serif
 $p_font: Cantarell, Cabin, Blooming Grove, Sans Serif
+$test: Georgia
