--- a/mysite/static/styles/sass/_menu.sass
+++ b/mysite/static/styles/sass/_menu.sass
@@ -5,8 +5,11 @@ section
     width: 100%
     padding: 1.5em !important
     background-color: rgba(10, 10, 10, 0.8)
+
     &.menu-items
         text-align: center
+        font-size: 1em
+        color: #ADAFB2
     &.border-right
         border-right: 1px solid #00427A
     &.menu-title-container
@@ -19,11 +22,40 @@ section
         color: #ADAFB2
         text-align: center
         margin-bottom: 0.2em
+      
+    h4
+        font-size: 30px
+    p 
+        text-align: left
+        color: #ADAFB2
+        font-style: italic
+    p:nth-child(even) 
+        font-style: normal    
+
+    //Use n-th child () to target other p's.       
+
+.center-left
+    position: relative
+    margin-right: 500px
+    margin-left: 150px
+    font-size: 30px
+    color: #ADAFB2
+    
+    
+
 
 // Top right "MENU"
 .menu-title
     margin: 0
     line-height: 90%
+
+
+// Menu Row Width
+.row 
+    max-width: 120rem
+    margin-left: auto
+    margin-right: auto
+
 
 
 // Edward's Menu Stylings
@@ -55,7 +87,7 @@ section
 
 .menu-font
     color: white
-    font-size: 40px
+    font-size: 50px
     font-family: Cabin
     position: relative
     bottom: 590px
